[package]
name = "exploparse"
version = "0.1.0"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
serde = { version = "1.0.104", features = ["derive"] }
jane-eyre = "0.1"
nom = "5.1.1"
tracing = "0.1.13"
thiserror = "1.0.11"
indenter = "0.1.3"
color-backtrace = "0.3.0"
tracing-error = "^0.1.2"
tracing-subscriber = { features = ["registry", "fmt"], version = "0.2" }
spandoc = "^0.1.2"
